--- a/index.html
+++ b/index.html
@@ -1,3 +1,166 @@
-<html>
-<head> <h1> CyberNerd404 </head>
+<html lang="en">
+
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <script type="text/javascript" src="http://code.jquery.com/jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="jquery.tiltedpage-scroll.js"></script>
+    <link rel="stylesheet" href="tiltedpage-scroll.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <div class="main">
+        <section class="header">
+            <div class="content-box">
+                <div class="menu">
+                    <img src="img/logo.png" alt="logo" />
+                    <button type="button"><i class="fa fa-sign-in"></i>Login</button>
+                </div>
+                <div class="banner-text">
+                    <h2>CREATIVE WEB DESIGN</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis facilis quibusdam dolore
+                        tenetur
+                        inventore, nihil culpa dolor voluptate! Quia perspiciatis corporis a recusandae eligendi saepe
+                        atque?
+                        Qui tempora sequi repellat?</p>
+                    <a href="#">About Us</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Services -->
+        <section class="service">
+            <div class="content-box">
+                <div class="container">
+                    <h1>Our Services</h1>
+                    <div class="row services">
+                        <div class="col-md-3 text-center">
+                            <div class="icon">
+                                <i class="fa fa-renren"></i>
+                            </div>
+                            <h3>Brand <span>Activation</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos earum quod similique
+                                ea
+                                odit asperiores sint quidem exercitationem dolorem libero</p>
+                        </div>
+                        <div class="col-md-3 text-center">
+                            <div class="icon">
+                                <i class="fa fa-user"></i>
+                            </div>
+                            <h3>Employee <span>Activity</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos earum quod similique
+                                ea
+                                odit asperiores sint quidem exercitationem dolorem libero</p>
+                        </div>
+                        <div class="col-md-3 text-center">
+                            <div class="icon">
+                                <i class="fa fa-meetup"></i>
+                            </div>
+                            <h3>Event <span>Organization</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos earum quod similique
+                                ea
+                                odit asperiores sint quidem exercitationem dolorem libero</p>
+                        </div>
+                        <div class="col-md-3 text-center">
+                            <div class="icon">
+                                <i class="fa fa-video-camera"></i>
+                            </div>
+                            <h3>Video <span>Production</span></h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos earum quod similique
+                                ea
+                                odit asperiores sint quidem exercitationem dolorem libero</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Feature -->
+        <section class="feature">
+            <div class="content-box">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h2>Features Are</h2>
+                            <ul>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/img.jpg" class="img-fluid" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer -->
+        <section class="footer">
+            <div class="content-box">
+                <div class="container">
+                    <h1>Get In Touch</h1>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <form class="contact-form">
+                                <div class="form-group">
+                                    <input class="form-control" type="text" placeholder="Enter Name">
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" type="number" placeholder="Enter Mobile">
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" type="email" placeholder="Enter Email">
+                                </div>
+                                <div class="form-group">
+                                    <textarea class="form-control" rows="4" placeholder="Enter Message"></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Send Message</button>
+                            </form>
+                        </div>
+                        <div class="col-md-6 contact-info">
+                            <div class="follow">
+                                <i class="fa fa-map-marker"></i><span>XYZ Road, Maharahtra, IN</span>
+                            </div>
+                            <div class="follow">
+                                <i class="fa fa-phone"></i><span>+1 0123456789</span>
+                            </div>
+                            <div class="follow">
+                                <i class="fa fa-envelope-o"></i><span>cybernerd404@gmail.com</span>
+                            </div>
+                            <div class="follow">
+                                <i class="fa fa-facebook"></i>
+                                <i class="fa fa-youtube-play"></i>
+                                <i class="fa fa-twitter"></i>
+                                <i class="fa fa-instagram"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <hr />
+                    <p class="copyright">Made with <i class="fa fa-heart-o"></i> by CyberNerd</p>
+                </div>
+            </div>
+        </section>
+    </div>
+    <script type="text/javascript">
+        $(".main").tiltedpage_scroll({
+            sectionContainer: "> section",     // In case you don't want to use <section> tag, you can define your won CSS selector here
+            angle: 50,                         // You can define the angle of the tilted section here. Change this to false if you want to disable the tilted effect. The default value is 50 degrees.
+            opacity: true,                     // You can toggle the opacity effect with this option. The default value is true
+            scale: true,                       // You can toggle the scaling effect here as well. The default value is true.
+            outAnimation: true                 // In case you do not want the out animation, you can toggle this to false. The defaul value is true.
+        });
+    </script>
+</body>
+
 </html>
