add construction site page

--- a/index.html
+++ b/index.html
@@ -1,166 +1,172 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en-US">
 
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <title>
+        Imminent - The most spectacular coming soon template!
+    </title><!-- Behavioral Meta Data -->
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <!-- Core Meta Data -->
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-3.4.1.js"></script>
-    <script type="text/javascript" src="jquery.tiltedpage-scroll.js"></script>
-    <link rel="stylesheet" href="tiltedpage-scroll.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="favicon.png" rel="shortcut icon" type="image/png">
+
+    <!-- CSS -->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
+    <!-- Styles -->
+    <link href="css/loader.css" rel="stylesheet" type="text/css">
+    <link href="css/normalize.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <!--[if lt IE 9]>
+            <link rel="stylesheet" type="text/css" href="css/ie.css" />
+        <![endif]-->
+    <!-- Javascript -->
+
+    <script src="js/jquery.js"></script>
 </head>
 
 <body>
-    <div class="main">
-        <section class="header">
-            <div class="content-box">
-                <div class="menu">
-                    <img src="img/logo.png" alt="logo" />
-                    <button type="button"><i class="fa fa-sign-in"></i>Login</button>
-                </div>
-                <div class="banner-text">
-                    <h2>CREATIVE WEB DESIGN</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis facilis quibusdam dolore
-                        tenetur
-                        inventore, nihil culpa dolor voluptate! Quia perspiciatis corporis a recusandae eligendi saepe
-                        atque?
-                        Qui tempora sequi repellat?</p>
-                    <a href="#">About Us</a>
-                </div>
-            </div>
-        </section>
-
-        <!-- Services -->
-        <section class="service">
-            <div class="content-box">
-                <div class="container">
-                    <h1>Our Services</h1>
-                    <div class="row services">
-                        <div class="col-md-3 text-center">
-                            <div class="icon">
-                                <i class="fa fa-renren"></i>
-                            </div>
-                            <h3>Brand <span>Activation</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos earum quod similique
-                                ea
-                                odit asperiores sint quidem exercitationem dolorem libero</p>
-                        </div>
-                        <div class="col-md-3 text-center">
-                            <div class="icon">
-                                <i class="fa fa-user"></i>
-                            </div>
-                            <h3>Employee <span>Activity</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos earum quod similique
-                                ea
-                                odit asperiores sint quidem exercitationem dolorem libero</p>
-                        </div>
-                        <div class="col-md-3 text-center">
-                            <div class="icon">
-                                <i class="fa fa-meetup"></i>
-                            </div>
-                            <h3>Event <span>Organization</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos earum quod similique
-                                ea
-                                odit asperiores sint quidem exercitationem dolorem libero</p>
-                        </div>
-                        <div class="col-md-3 text-center">
-                            <div class="icon">
-                                <i class="fa fa-video-camera"></i>
-                            </div>
-                            <h3>Video <span>Production</span></h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos earum quod similique
-                                ea
-                                odit asperiores sint quidem exercitationem dolorem libero</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Feature -->
-        <section class="feature">
-            <div class="content-box">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h2>Features Are</h2>
-                            <ul>
-                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
-                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
-                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
-                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
-                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
-                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
-                                <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6">
-                            <img src="img/img.jpg" class="img-fluid" />
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Footer -->
-        <section class="footer">
-            <div class="content-box">
-                <div class="container">
-                    <h1>Get In Touch</h1>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <form class="contact-form">
-                                <div class="form-group">
-                                    <input class="form-control" type="text" placeholder="Enter Name">
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" type="number" placeholder="Enter Mobile">
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" type="email" placeholder="Enter Email">
-                                </div>
-                                <div class="form-group">
-                                    <textarea class="form-control" rows="4" placeholder="Enter Message"></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-primary">Send Message</button>
-                            </form>
-                        </div>
-                        <div class="col-md-6 contact-info">
-                            <div class="follow">
-                                <i class="fa fa-map-marker"></i><span>XYZ Road, Maharahtra, IN</span>
-                            </div>
-                            <div class="follow">
-                                <i class="fa fa-phone"></i><span>+1 0123456789</span>
-                            </div>
-                            <div class="follow">
-                                <i class="fa fa-envelope-o"></i><span>cybernerd404@gmail.com</span>
-                            </div>
-                            <div class="follow">
-                                <i class="fa fa-facebook"></i>
-                                <i class="fa fa-youtube-play"></i>
-                                <i class="fa fa-twitter"></i>
-                                <i class="fa fa-instagram"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <hr />
-                    <p class="copyright">Made with <i class="fa fa-heart-o"></i> by CyberNerd</p>
-                </div>
-            </div>
-        </section>
+    <div class="preloader">
+        <div class="loading">
+            <h2>
+                Loading...
+            </h2>
+            <span class="progress"></span>
+        </div>
     </div>
-    <script type="text/javascript">
-        $(".main").tiltedpage_scroll({
-            sectionContainer: "> section",     // In case you don't want to use <section> tag, you can define your won CSS selector here
-            angle: 50,                         // You can define the angle of the tilted section here. Change this to false if you want to disable the tilted effect. The default value is 50 degrees.
-            opacity: true,                     // You can toggle the opacity effect with this option. The default value is true
-            scale: true,                       // You can toggle the scaling effect here as well. The default value is true.
-            outAnimation: true                 // In case you do not want the out animation, you can toggle this to false. The defaul value is true.
-        });
-    </script>
+
+    <div class="wrapper">
+        <ul class="scene unselectable" data-friction-x="0.1" data-friction-y="0.1" data-scalar-x="25" data-scalar-y="15"
+            id="scene">
+            <li class="layer" data-depth="0.00">
+            </li>
+            <!-- BG -->
+
+            <li class="layer" data-depth="0.10">
+                <div class="background">
+                </div>
+            </li>
+
+            <!-- Hero -->
+
+            <li class="layer" data-depth="0.20">
+                <div class="title">
+                    <h2>
+                        <img class="logo" src="/images/logo.png" alt="logo" />
+                        CyberNerd
+                    </h2>
+                    <span class="line"></span>
+                </div>
+            </li>
+
+            <li class="layer" data-depth="0.25">
+                <div class="sphere">
+                    <img alt="sphere" src="images/sphere.png">
+                </div>
+            </li>
+
+            <li class="layer" data-depth="0.30">
+                <div class="hero">
+                    <h1 id="countdown">
+                        Our site comming soon, Please wait till that time!
+                    </h1>
+
+                    <p class="sub-title">
+                        Our site comming soon, Please wait till that time!
+                    </p>
+                </div>
+            </li>
+            <!-- Flakes -->
+
+            <li class="layer" data-depth="0.40">
+                <div class="depth-1 flake1">
+                    <img alt="flake" src="images/flakes/depth1/flakes1.png">
+                </div>
+
+                <div class="depth-1 flake2">
+                    <img alt="flake" src="images/flakes/depth1/flakes2.png">
+                </div>
+
+                <div class="depth-1 flake3">
+                    <img alt="flake" src="images/flakes/depth1/flakes3.png">
+                </div>
+
+                <div class="depth-1 flake4">
+                    <img alt="flake" src="images/flakes/depth1/flakes4.png">
+                </div>
+            </li>
+
+            <li class="layer" data-depth="0.50">
+                <div class="depth-2 flake1">
+                    <img alt="flake" src="images/flakes/depth2/flakes1.png">
+                </div>
+
+                <div class="depth-2 flake2">
+                    <img alt="flake" src="images/flakes/depth2/flakes2.png">
+                </div>
+            </li>
+
+            <li class="layer" data-depth="0.60">
+                <div class="depth-3 flake1">
+                    <img alt="flake" src="images/flakes/depth3/flakes1.png">
+                </div>
+
+                <div class="depth-3 flake2">
+                    <img alt="flake" src="images/flakes/depth3/flakes2.png">
+                </div>
+
+                <div class="depth-3 flake3">
+                    <img alt="flake" src="images/flakes/depth3/flakes3.png">
+                </div>
+
+                <div class="depth-3 flake4">
+                    <img alt="flake" src="images/flakes/depth3/flakes4.png">
+                </div>
+            </li>
+
+            <li class="layer" data-depth="0.80">
+                <div class="depth-4">
+                    <img alt="flake" src="images/flakes/depth4/flakes.png">
+                </div>
+            </li>
+
+            <li class="layer" data-depth="1.00">
+                <div class="depth-5">
+                    <img alt="flake" src="images/flakes/depth5/flakes.png">
+                </div>
+            </li>
+            <!-- Contact -->
+
+            <li class="layer" data-depth="0.20">
+                <div class="contact">
+                    <ul class="icons">
+                        <li>
+                            <a class="behance" href="https://www.instagram.com/cybernerd_404/"><i
+                                    class="fa fa-instagram"></i></a>
+                        </li>
+
+                        <li>
+                            <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                        </li>
+
+                        <li>
+                            <a class="dribbble" href="#"><i class="fa fa-facebook"></i></a>
+                        </li>
+                    </ul>
+                    Made with <i style="color: red;" class="fa fa-heart-o"></i> CyberNerd</a>
+                    <a class="mail" href="mailto:cybernerd404@gmail?subject=Hi%20CyberNerd!">cybernerd404@gmail.com</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <!-- Javascript -->
+    <script src="js/plugins.js"></script>
+    <script src="js/jquery.countdown.min.js"></script>
+    <script src="js/main.js"></script>
+
 </body>
 
 </html>
