add favicon & update meta tags

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Imminent - The most spectacular coming soon template!
+        CypherX - Aim to build a more powerful community
     </title><!-- Behavioral Meta Data -->
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Core Meta Data -->
+    <meta name="url" content="https://cybernerd404.github.io/">
+    <meta property="og:site_name" content="CyberNerd">
+    <meta name="type" content="website">
+    <meta name="title" content="Aim to build a more powerful community | CyberNerd.">
+    <meta name="description"
+        content="CyberNerd is the community where all developer contribute him/her self to produce better product or sharing experience to each others">
+    <meta name="image" content="image/home.jpg">
 
-    <link href="favicon.png" rel="shortcut icon" type="image/png">
+    <link href="favicon.ico" rel="shortcut icon" type="image/png">
 
     <!-- CSS -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
@@ -54,7 +61,7 @@
             <li class="layer" data-depth="0.20">
                 <div class="title">
                     <h2>
-                        <img class="logo" src="/images/logo.png" alt="logo" />
+                        <img class="logo" src="images/logo.png" alt="logo" />
                         CyberNerd
                     </h2>
                     <span class="line"></span>
