change meta image value

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="title" content="Aim to build a more powerful community | CyberNerd.">
     <meta name="description"
         content="CyberNerd is the community where all developer contribute him/her self to produce better product or sharing experience to each others">
-    <meta name="image" content="image/home.jpg">
+    <meta name="image" content="https://cybernerd404.github.io/images/home.jpg">
 
     <link href="favicon.ico" rel="shortcut icon" type="image/png">
 
