--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         </li>
                     </ul>
                     Made with <i style="color: red;" class="fa fa-heart-o"></i> CyberNerd</a>
-                    <a class="mail" href="mailto:cybernerd404@gmail?subject=Hi%20CyberNerd!">cybernerd404@gmail.com</a>
+                    <a class="mail" href="mailto:cybernerd404notfound@gmail.com?subject=Hi%20CyberNerd!">cybernerd404notfound@gmail.com</a>
                 </div>
             </li>
         </ul>
