--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        CypherX - Aim to build a more powerful community
+        CyberNerd - Aim to build a more powerful community
     </title><!-- Behavioral Meta Data -->
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -77,11 +77,11 @@
             <li class="layer" data-depth="0.30">
                 <div class="hero">
                     <h1 id="countdown">
-                        Our site comming soon, Please wait till that time!
+                        Oops! The website is under maintenance, Stay tuned for the updates!!
                     </h1>
 
                     <p class="sub-title">
-                        Our site comming soon, Please wait till that time!
+                        Oops! The website is under maintenance, Stay tuned for the updates!!
                     </p>
                 </div>
             </li>
@@ -155,11 +155,11 @@
                         </li>
 
                         <li>
-                            <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                            <a class="twitter" href="https://twitter.com/harsh_mule"><i class="fa fa-twitter"></i></a>
                         </li>
 
                         <li>
-                            <a class="dribbble" href="#"><i class="fa fa-facebook"></i></a>
+                            <a class="dribbble" href="https://www.facebook.com/dev_amigo-113590557071717"><i class="fa fa-facebook"></i></a>
                         </li>
                     </ul>
                     Made with <i style="color: red;" class="fa fa-heart-o"></i> CyberNerd</a>
