--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="favicon.ico" rel="shortcut icon" type="image/png">
 
     <!-- CSS -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,900' rel='stylesheet' type='text/css'>
     <!-- Styles -->
     <link href="css/loader.css" rel="stylesheet" type="text/css">
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
